[package]
name = "singrep"
author = "singe"
version = "0.1.0"
edition = "2021"
description = "Fast grep using single-file parallelism"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ripline = "0.1"
memmap2 = "0.5"
hash_hasher = "2.0"
crossbeam-channel = "0.5"
num_cpus = "1.13"
libc = "0.2"
page_size = "0.4"
clap = { version = "4.0.18", features = ["derive"] }
